tests/valid_seq/exported_foreign_type.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module exported_foreign_type.
:- interface.
:- import_module exported_foreign_type_helper_1.
:- type t2 == t.
